--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>ontora</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem modi temporibus quibusdam vitae fugiat sequi dolorem laborum magnam cupiditate 
         saepe est exercitationem sit, accusantium debitis rerum repudiandae ab totam?</p>
 </body>
